# asl-math

./: .pre-commit-config.yaml  README.md  pyproject.toml
configs/: default.yaml
notebooks/: exploratory.ipynb
src/: __init__.py  evaluate.py  export.py  features.py  model.py  normalize.py  spatial.py  train.py  vocab.py
src/wfst/: __init__.py  build_g.py  build_lc.py  decode.py
tests/: __init__.py  test_features.py  test_integration.py  test_model.py  test_normalize.py  test_spatial.py  test_wfst.py
